--- a/src/main/resources/templates/sectores.html.hbs
+++ b/src/main/resources/templates/sectores.html.hbs
@@ -36,7 +36,7 @@
                         <div class="sectores-label">
                             Elegí el sector al que te querés vincular
                         </div>
-                        <form action="/sectores/vinculacion" method="POST">
+                        <form action="/home/sectores/vinculacion" method="POST">
                         {{#each sectores}}
                             <div class="sector">
                                 <input type="radio" id="{{id}}" name="sector" value="{{id}}">
