--- a/src/main/resources/templates/solicitudes.html.hbs
+++ b/src/main/resources/templates/solicitudes.html.hbs
@@ -6,6 +6,7 @@
         <div class="wrapper">
             <header>
                 <div class="section">
+                    <a href="/">Home</a>
                     <div class="header-title">
                         Solicitudes
                     </div>
