--- a/src/main/resources/templates/vinculacion.html.hbs
+++ b/src/main/resources/templates/vinculacion.html.hbs
@@ -15,7 +15,7 @@
             </header>
             <div class="content">
                 <div class="section">
-                    <form class="search-form" action="/vinculacion" method="POST">
+                    <form class="search-form" action="/home/vinculacion" method="POST">
                         <input class="searchbar" name="nombre" placeholder="Escribí el nombre de la organización..."/>
                         <input class="login-button" type="submit" value="Buscar">
                     </form>
