--- a/src/main/resources/templates/layout.html.hbs
+++ b/src/main/resources/templates/layout.html.hbs
@@ -10,22 +10,25 @@
   <header>
     <div class="section">
         <a class="item-menu" href="/">Home</a>
-
-        <a class="item-menu" href="/huella">Calcular HC</a>
-        <a class="item-menu" href="/solicitudes">Solicitudes</a>
-        <a class="item-menu" href="/reportes">Reportes</a>
-        <a class="item-menu" href="/medicion">Mediciones</a>
-
-        <a class="item-menu" href="/trayecto">Trayecto</a>
-        <a class="item-menu" href="/vinculacion">Vinculaciones</a>
-
-        <a class="item-menu" href="/recomendaciones">Guia de Recomendaciones</a>
+        {{#if Usuario}}
+            <a class="item-menu" href="/home/sectoresPorUsuario">Sectores</a>
+            <a class="item-menu" href="/home/vinculacion">Vinculaciones</a>
+            <a class="item-menu" href="/home/huella">Calcular HC</a>
+            <a class="item-menu" href="/home/recomendaciones">Guia de Recomendaciones</a>
+        {{/if}}
+        {{#if Administrador}}
+            <a class="item-menu" href="/home/huella">Calcular HC</a>
+            <a class="item-menu" href="/home/solicitudes">Solicitudes</a>
+            <a class="item-menu" href="/home/reportes">Reportes</a>
+            <a class="item-menu" href="/home/medicion">Mediciones</a>
+            <a class="item-menu" href="/home/recomendaciones">Guia de Recomendaciones</a>
+        {{/if}}
         {{#if sesionIniciada}}
-            <a class="item-menu" href="/loginUsuarioSinLogueo">Iniciar Sesión</a>
-        {{else}}
             <form action="/loginUsuarioSinLogueo/logout" method="POST">
                 <input class="item-menu2" type="submit" value="Cerrar Sesión">
             </form>
+        {{else}}
+            <a class="item-menu" href="/loginUsuarioSinLogueo">Iniciar Sesión</a>
         {{/if}}
     </div>
   </header>
