--- a/src/main/resources/templates/layoutSinAcceso.html.hbs
+++ b/src/main/resources/templates/layoutSinAcceso.html.hbs
@@ -9,6 +9,7 @@
 <body>
 <header>
     <div class="section">
+        <a class="item-menu" href="/homeUsuario">Home</a>
         {{#if sesionIniciada}}
             <a class="item-menu" href="/loginUsuarioSinLogueo">Iniciar Sesión</a>
         {{else}}
